[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/LobbyDialog.gd" type="Script" id=1]
[ext_resource path="res://fonts/input_label_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/text.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/button_font.tres" type="DynamicFont" id=4]

[node name="PanelContainer" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 189.0
margin_bottom = 342.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 162.0
margin_bottom = 315.0

[node name="PartyIdLabel" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 142.0
margin_bottom = 48.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PartyIdLabel"]
margin_top = 10.0
margin_right = 142.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 2 )
text = "Party ID: "
align = 1

[node name="ConnectedPlayersLabel" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 142.0
margin_bottom = 95.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ConnectedPlayersLabel"]
margin_top = 10.0
margin_right = 142.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "Connected Players"

[node name="PlayersContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 142.0
margin_bottom = 109.0
custom_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PlayersContainer"]
margin_top = 10.0
margin_right = 142.0
margin_bottom = 10.0

[node name="StartGameButton" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 113.0
margin_right = 142.0
margin_bottom = 167.0
custom_constants/margin_top = 20

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/StartGameButton"]
margin_top = 20.0
margin_right = 142.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 4 )
text = "Start Game"

[node name="LeaveButton" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 171.0
margin_right = 142.0
margin_bottom = 225.0
custom_constants/margin_top = 20

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/LeaveButton"]
margin_top = 20.0
margin_right = 142.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 4 )
text = "Leave"
